--- a/index.html
+++ b/index.html
@@ -1,3 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Navbar</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
+</head>
+<body>
     <nav class="nav">
         <i class="uil uil-bars navOpenBtn"></i>
         <li>Design</li>
@@ -5,54 +19,32 @@
         <ul class="nav-links mt-3">
             <i class="uil uil-times navCloseBtn"></i>
             <li><a href="#" class="nav-link">Home</a></li>
-        <li
-            class="menu-item ">
-            <a href="" class="nav-link  dropdown-toggle" data-bs-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">Products</a>
-            <ul class="dropdown-menu  depth_0">
-                <li 
-                    class="menu-item "><a
-                        href="" class="dropdown-item nav-link ">Air handling unit
-                        (AHUs)</a></li>
-                <li 
-                    class="menu-item "><a
-                        href="" class="dropdown-item nav-link">Air Washer</a></li>
-                <li 
-                    class="menu-item "><a
-                        href="" class="dropdown-item nav-link">Exhaust Air Unit</a>
-                </li>
-                <li 
-                    class="menu-item "><a
-                        href="" class="dropdown-item nav-link">Aluminum Damper</a></li>
-                <li 
-                    class="menu-item "><a
-                        href="" class="dropdown-item nav-link">Ceiling Suspended
-                        Units</a></li>
-                <li 
-                    class="menu-item "><a
-                        href="" class="dropdown-item nav-link">Fan Coil Unit (FCU)</a>
-                </li>
-                <li
-                    class="menu-item "><a
-                        href="" class="dropdown-item nav-link">Floor Mounted Air Washer
-                        Units</a></li>
-                <li 
-                    class="menu-item "><a
-                        href="" class="dropdown-item nav-link">Hepa set powder
-                        coated&nbsp;</a></li>
-                <li 
-                    class="menu-item "><a
-                        href="" class="dropdown-item nav-link">Modular OT</a></li>
-            </ul>
-        </li>
-            <li 
-                class="menu-item ">
+            <li class="menu-item ">
+                <a href="" class="nav-link  dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true"
+                    aria-expanded="false">Products</a>
+                <ul class="dropdown-menu  depth_0">
+                    <li class="menu-item "><a href="" class="dropdown-item nav-link ">Air handling unit
+                            (AHUs)</a></li>
+                    <li class="menu-item "><a href="" class="dropdown-item nav-link">Air Washer</a></li>
+                    <li class="menu-item "><a href="" class="dropdown-item nav-link">Exhaust Air Unit</a>
+                    </li>
+                    <li class="menu-item "><a href="" class="dropdown-item nav-link">Aluminum Damper</a></li>
+                    <li class="menu-item "><a href="" class="dropdown-item nav-link">Ceiling Suspended
+                            Units</a></li>
+                    <li class="menu-item "><a href="" class="dropdown-item nav-link">Fan Coil Unit (FCU)</a>
+                    </li>
+                    <li class="menu-item "><a href="" class="dropdown-item nav-link">Floor Mounted Air Washer
+                            Units</a></li>
+                    <li class="menu-item "><a href="" class="dropdown-item nav-link">Hepa set powder
+                            coated&nbsp;</a></li>
+                    <li class="menu-item "><a href="" class="dropdown-item nav-link">Modular OT</a></li>
+                </ul>
+            </li>
+            <li class="menu-item ">
                 <a href="#" class="nav-link  dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true"
                     aria-expanded="false">Validations</a>
                 <ul class="dropdown-menu  depth_0">
-                    <li 
-                        class="menu-item "><a
-                            href="" class="dropdown-item ">HVAC / Clean Room
+                    <li class="menu-item "><a href="" class="dropdown-item ">HVAC / Clean Room
                             Validation</a></li>
                 </ul>
             </li>
@@ -67,3 +59,5 @@
         </div>
         <a href="" class="btns">Register</a>
     </nav>
+</body>
+</html>
